[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-python-collections-redis"
version = "0.1.0"
description = "Redis backend plugin for distributed-python-collections."
requires-python = ">=3.10"
authors = [
  { name = "Distributed Collections Team" }
]
dependencies = [
  "distributed-python-collections>=0.1.0",
  "redis",
]
keywords = ["redis", "distributed-systems", "collections", "plugin"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Distributed Computing",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["distributed_collections_redis*"]
